upcoming (TODO)
  Iterators over set bits for BoolArray
  Iterators over unset bits for BoolArray
  Iterators over unset bits for EWAHBoolArray
  logicalandnot for EWAHBoolArray

0.4.4 (November 11th, 2014)
  Fixed build error for MSVC

0.4.3 (March 25th, 2014)
  Added numberOfOnes to BoolArray
  Fixed behavior of andNot and Not in BoolArray, with unit tests
  Fixed behavior of Not in EWAHBoolArray with unit tests
 
0.4.2 (February 20th, 2014)
  Renamed "add" to "addWord".
  Added "andNot" to BoolArray
  Optimized the behavior of the operators in BoolArray
0.4.1 (February 13th, 2014)
  Now compiles under the Intel compiler 

0.4.0 (October 4th, 2013)
  Added support for logicalxor.
  Extended considerably the uncompressed bitmap class.
  Made input/output more robust vs. empty bitmaps.
  Added several convenience methods (string conversion, bitmapOf...).
  Updated example.cpp with nicer code.


0.3.9 (September 10th, 2013)
  Added a few "inline" attributes.

0.3.8 (September 4th, 2013)
  The set method now returns a bool indicating whether the
  bit was set. This allows you to try and set the bits in 
  a non-strictly-increasing order (though only bits where 
  the return value is true will be set). If your code sets 
  the bits in strictly increasing order, the return value of
  the set method should always be true.

0.3.7 (March 29th, 2013)
  Fixed issues with Visual Studio (the portability of the code
  was improved).

0.3.6 (January 22nd, 2012)
  Resolved issue 'logical operations do not always set trailing run length correctly'
  submitted by  creitzel@rcn.com with patch from  creitzel@rcn.com. (Issue #4)

0.3.5 (November 26th, 2012)
  Resolved performance issue with EWAHBoolArraySetBitForwardIterator (issue reported by Paul Bowman)

0.3.2, 0.3.3, 0.3.4 (June 12 to 15th 2012)
  Minor releases trying to fix compatibility issues with Microsoft compilers.

0.3.1 (May 28th, 2012)
  Fixed a perf. regression bug.

0.3.0  (May 24th, 2012)